boreal/tests/assets/invalid_files/compilation/match_on_wildcard_rule_set.yar
// [error: rule "a125" matches a previous rule set "a*"]
rule a0 {
    condition:
        true
}

rule b {
    condition:
        all of (a*)
}

rule a125 {
    condition: true
}
